[package]
name = "eldritch_horror"
version = "0.1.0"
authors = ["Jonny Kenyon <granitrocky@gmail.com>"]
edition = "2018"
resolver = "2"

[profile.release]
opt-level = "z"

[profile.dev]
opt-level = "z"

[dependencies]
rust_olc_pge = { path = "C:/Users/grani/Documents/Rust/game_engine" }
wgpu = "0.11"
num-traits = "*"
bytemuck = { version = "1.4", features = [ "derive" ] }
