[package]
name = "prison_escape"
version = "0.1.0"
authors = ["Jonny Kenyon <granitrocky@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "z"

[profile.dev]
opt-level = "z"

[dependencies]
og_engine = { git = "https://github.com/OrdinaryGizmos/game_engine.git" }
wgpu = "0.11"
num-traits = "*"
bytemuck = { version = "1.4", features = [ "derive" ] }
